service: add restore json api withschema
