# services/api/internal/services/backup/types.go
@@ -1,1 +1,6 @@
 package backup
+
+type RestoreResponse struct {
+	Inserted *[]string `json:"inserted"`
+	Existing *[]string `json:"existing"`
+}
